--- a/arch/arm/dts/s5p4418.dtsi
+++ b/arch/arm/dts/s5p4418.dtsi
@@ -8,6 +8,8 @@
 #include "skeleton.dtsi"
 #include "../../../include/generated/autoconf.h"
 / {
+	#include "s5p4418-pinctrl.dtsi"
+
 	aliases {
 		mmc0 = "/mmc0:mmc@c0062000";
 		mmc1 = "/mmc1@c0068000";
